[Changes 1.2.2]

* Fix memory leaks in /CDCC PLIST and /CDCC NOTICE. (caf) 

* Rename reserved identifiers from irc_std.h to fix building on under
  latest cygwin. (caf)

* Ensure /BAN /DBAN /MB /MK /MUB /UNBAN commands send command to the right
  server. (caf)

* Fix "implied" operators (eg. += ) under NEW_MATH. (caf)

* Add /SCANB command to scan for users on the userlist with the BOT flag. (caf)

* Wire up /FSET WHOIS_BOT for users on the userlist with the BOT flag. (caf)

* Use /FSET RELSN to format /RELSN relayed messages instead of
  /FSET SEND_NOTICE. (caf)

* Change formatting of /FSETs SERVER_NOTICE_KLINE and SERVER_NOTICE_GLINE
  to show the ban type, and improve formatting of SERVER_NOTICE_CLIENT_CONNECT
  and SERVER_NOTICE_CLIENT_EXIT. (caf)

* Clean up handling of oper server notices, including removing some
  obsolete notice types (eg "high-traffic mode"). (caf)

* Unify handling of SWATCH NONE between OperView and non-OperView. (caf)

* Don't double-up server notices in the /RELS list. (caf)

* Don't fire the SERVER_NOTICE hook more than once per notice. (caf)

* Fix display of the OperView SWATCH flags variable. (caf)

* Update default /fset SERVER_NOTICE value to remove extra space. (caf)

* Treat all NOTICEs before registration as local server notices. (caf)

* Add /on NOTICE_GROUP and /fset NOTICE_GROUP analogous to MSG_GROUP. (caf)

* Add configure check for <sys/sockio.h>. (caf)

* Improve /WINDOW DESCRIBE output a little. (caf)

* If we can't create a socket for the first address returned by getaddrinfo(),
  try the other returned addresses. (caf)

* Only show version once with -v option (reported by cpet). (caf)

* Drop group privileges before droppping user privileges when execing. (caf)

* Apply patch from cpet to make autogen.sh prompt to run configure. (caf)

* Improve some messages in /window size (reported by cpet). (caf)

* Improve messages around DCC auto-get / auto-rename / auto-resume. (caf)
